test/test-cases/verify/negative/malformed-no-subject_fail/bundle.sig
{
  "mediaType": "application/vnd.dev.sigstore.bundle.v0.3+json",
  "verificationMaterial": {
    "publicKey": {
      "hint": "e8450dec4eb99dae995da9af1bc2cc9f76ed669ee2e744f57abba763df3e3f8e"
    },
    "tlogEntries": []
  },
  "dsseEnvelope": {
    "payload": "eyJfdHlwZSI6ICJodHRwczovL2luLXRvdG8uaW8vU3RhdGVtZW50L3YxIiwgInN1YmplY3QiOiBbXSwgInByZWRpY2F0ZVR5cGUiOiAiaHR0cHM6Ly9tb2RlbF9zaWduaW5nL3NpZ25hdHVyZS92MS4wIiwgInByZWRpY2F0ZSI6IHsicmVzb3VyY2VzIjogW3siZGlnZXN0IjogImJjOWE3MTdkYjYwNjRhMzJjYmU5ZWFlNmZjNDA2NTFkZDZkMzZlZjE3NTcxODNmNTkwZWZmMmIxNzY1ZDdlYmMiLCAiYWxnb3JpdGhtIjogInNoYTI1NiIsICJuYW1lIjogInNpZ25tZS0xIn0sIHsiZGlnZXN0IjogIjMyZGNiMWY4ZTFhZTUyZDU5NjNlNTZhNmJhMDZhYjU4YjQyNGMxNWVkMmE2YjcwZDJmZWNhMWQwODkzNzAwMjgiLCAiYWxnb3JpdGhtIjogInNoYTI1NiIsICJuYW1lIjogInNpZ25tZS0yIn1dLCAic2VyaWFsaXphdGlvbiI6IHsibWV0aG9kIjogImZpbGVzIiwgImlnbm9yZV9wYXRocyI6IFsiLmdpdGF0dHJpYnV0ZXMiLCAiLmdpdGh1YiIsICJpZ25vcmUtbWUiLCAiLmdpdGlnbm9yZSIsICIuZ2l0Il0sICJoYXNoX3R5cGUiOiAic2hhMjU2IiwgImFsbG93X3N5bWxpbmtzIjogZmFsc2V9fX0=",
    "payloadType": "application/vnd.in-toto+json",
    "signatures": [
      {
        "sig": "MGQCMDNHlJBKxhHVeSWQ+RWXT2LKSOcd3fF6jQLxRs8zdXnJI9Ff8zKrDeMLvprDzqzKZQIwQmpMu2WZsNmlfMD+5S0UqwBnJ3/xLPjO+bYmBn/c5fg80jHloGe9fmjR5d57Y1XM",
        "keyid": ""
      }
    ]
  }
}